--- a/src/main/resources/static/css/changepassword.css
+++ b/src/main/resources/static/css/changepassword.css
@@ -1,4 +1,9 @@
-/* change-password.css (angepasst an login.css-Stil) */
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
 body {
     font-family: 'Segoe UI', sans-serif;
     background: radial-gradient(circle at top left, #4b0082, #1a1a2e);
