--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -5,8 +5,21 @@
     <title>Passwort ändern</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" th:href="@{/css/changepassword.css}">
+    <link rel="stylesheet" th:href="@{/css/navbar.css}">
 </head>
 <body>
+<div class="navbar">
+    <div class="brand">SpringCloud</div>
+    <div class="username-box">
+        <span th:text="${username}">Username</span>
+        <div class="logout-dropdown" id="logoutDropdown">
+            <a th:if="${role == 'ROLE_ADMIN'}" th:href="@{/admin}">Admin</a>
+            <a th:if="${role == 'ROLE_ADMIN'}" th:href="@{/register}">Add Users</a>
+            <a th:href="@{/dashboard}">Dashboard</a>
+            <a th:href="@{/logout}">Logout</a>
+        </div>
+    </div>
+</div>
 <div class="container">
     <h2>Passwort ändern</h2>
 
