--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -5,14 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SpringCloud Admin</title>
     <link rel="stylesheet" th:href="@{/css/admin.css}">
+    <link rel="stylesheet" th:href="@{/css/navbar.css}">
 </head>
 <body>
 
 <div class="navbar">
-    <div class="brand">SpringCloud Admin</div>
-    <div>
-        <span th:text="${username}">Admin Username</span>
-        <a href="/logout" class="button">Logout</a>
+    <div class="brand">SpringCloud</div>
+    <div class="username-box">
+        <span th:text="${username}">Username</span>
+        <div class="logout-dropdown" id="logoutDropdown">
+            <a th:if="${role == 'ROLE_ADMIN'}" th:href="@{/register}">Add Users</a>
+            <a th:href="@{/dashboard}">Dashboard</a>
+            <a th:href="@{/change-password}">Change Password</a>
+            <a th:href="@{/logout}">Logout</a>
+        </div>
     </div>
 </div>
 
