--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SpringCloud Dashboard</title>
     <link rel="stylesheet" th:href="@{/css/dashboard.css}">
+    <link rel="stylesheet" th:href="@{/css/navbar.css}">
 </head>
 <body>
 
@@ -12,9 +13,9 @@
     <div class="brand">SpringCloud</div>
     <div class="username-box">
         <span th:text="${username}">Username</span>
-        <div class="logout-dropdown">
-            <a th:if="${role == 'ROLE_ADMIN'}" th:href="@{/register}">Add Users</a>
+        <div class="logout-dropdown" id="logoutDropdown">
             <a th:if="${role == 'ROLE_ADMIN'}" th:href="@{/admin}">Admin</a>
+            <a th:if="${role == 'ROLE_ADMIN'}" th:href="@{/register}">Add Users</a>
             <a th:href="@{/change-password}">Change Password</a>
             <a th:href="@{/logout}">Logout</a>
         </div>
