--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,6 +18,10 @@
             <input type="password" name="password" required placeholder=" " />
             <label>Passwort</label>
         </div>
+        <div class="checkbox-group">
+            <input type="checkbox" id="remember-me" name="remember-me">
+            <label for="remember-me">Remember me</label>
+        </div>
         <button type="submit">Login</button>
     </form>
 </div>
