--- a/src/main/resources/templates/banned.html
+++ b/src/main/resources/templates/banned.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gesperrt</title>
+  <title>Banned</title>
   <link rel="stylesheet" th:href="@{/css/banned.css}">
 </head>
 <body>
   <div class="brand">SpringCloud</div>
   <div class="container">
-    <h1>Du wurdest gebannt!</h1>
-    <p class="message">Du hast keinen Zugriff auf diese Seite. Wende dich an den Administrator, um mehr zu erfahren.</p>
+    <h1>You are banned!</h1>
+    <p class="message">You don't have access to this page. Contact the administrator for more information.</p>
     <a href="/logout" class="action-btn">Logout</a>
   </div>
 </body>
