--- a/src/main/resources/templates/shared_file.html
+++ b/src/main/resources/templates/shared_file.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Shared File</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" th:href="@{/css/sharedfile.css}">
 </head>
 <body>
@@ -14,7 +13,20 @@
     <p><strong th:text="${fileName}">File Name</strong></p>
 
     <div class="file-preview" th:if="${isPreviewable}">
-        <iframe th:src="@{'/share/file/download/' + ${token} + '?preview=true'}" allowfullscreen></iframe>
+        <!-- Image preview -->
+        <img th:if="${fileType.startsWith('image/')}"
+             th:src="@{'/share/file/download/' + ${token} + '?preview=true'}"
+             th:alt="${fileName}" style="max-width: 100%; max-height: 100%;" />
+
+        <!-- PDF preview -->
+        <embed th:if="${fileType == 'application/pdf'}"
+               th:src="@{'/share/file/download/' + ${token} + '?preview=true'}"
+               type="application/pdf" width="100%" height="600px"/>
+
+        <!-- Text preview -->
+        <iframe th:if="${fileType.startsWith('text/')}"
+                th:src="@{'/share/file/download/' + ${token} + '?preview=true'}"
+                style="width:100%; height:600px; border:none;"></iframe>
     </div>
 
     <div class="file-preview" th:unless="${isPreviewable}">
@@ -27,6 +39,5 @@
 
     <a class="download-btn" th:href="@{'/share/file/download/' + ${token}}">Download File</a>
 </div>
-
 </body>
 </html>
